Handling conflicts on moved datasets